<resources>
    <!-- values that have no need to be translated to locale language-->
    <string name="default_start_time">21:30</string>
    <string name="default_end_time">08:30</string>
    <string name="ads_user_id">3815845016477716</string>
    <string name="smart_banner_ad_unit_id" translatable="false">ca-app-pub-6177746105485183/5817094357</string>
    <string name="reward_ad_unit_id" translatable="false">ca-app-pub-6177746105485183/8114920325</string>

    <!-- sharedPreferences values -->
    <string translatable="false" name="sp_name">GS_SP_GentleServiceLocalData</string>
    <string translatable="false" name="sp_timeWaiting">GS_SP_time</string>
    <string translatable="false" name="sp_do_not_disturb">GS_SP_disturb</string>
    <string translatable="false" name="sp_is_service_running">GS_SP_isRunning</string>
    <string translatable="false" name="sp_is_scheduled">GS_SP_isScheduled</string>
    <string translatable="false" name="sp_surprise_me">GS_SP_isSurpriseMe</string>
    <string translatable="false" name="sp_start_time">GS_SP_spinner_timeOne</string>
    <string translatable="false" name="sp_end_time">GS_SP_spinner_timeTwo</string>
    <string translatable="false" name="sp_locale">GS_SP_app_locale</string>
    <string translatable="false" name="sp_contact_name">GS_SP_contact_name</string>
    <string translatable="false" name="sp_contact_phone_num">GS_SP_phone_number</string>
    <string translatable="false" name="sp_sms_text">GS_SP_sms_text</string>
    <string translatable="false" name="sp_timeEndPeriod">GS_SP_end_Period</string>
    <string translatable="false" name="sp_locale_has_changed">GS_SP_locale_has_changed</string>
    <string translatable="false" name="sp_surprise_spinner_value">GS_SP_sniper_value</string>
    <string translatable="false" name="sp_surprise_time_max_value">GS_SP_time_max_value</string>
    <string translatable="false" name="sp_time_wait_value">GS_SP_time_waiting_period</string>
    <string translatable="false" name="sp_show_compliment_only">sp_show_compliment_only</string>
    <string translatable="false" name="sp_restart_complimenting">GS_SP_restart_complimenting</string>

    <string name="sms">SMS</string>
    <string name="i_do_not_know_what_to_do">I don not know what to do!</string>


    <string name="exit_text">exit</string>
    <string name="do_not_disturb_label">Do not disturb me</string>
    <string name="btnStart_text">Start Compliments</string>
    <string name="btnStop_text">Stop Compliments</string>
    <string name="time_hint">Enter the time in minutes</string>
    <string name="invalid_number_text">Invalid input! \n Time must be a positive integer!</string>
    <string name="timePicker_between_text">between</string>
    <string name="timePicker_and_text">and</string>
    <string name="title_activity_complimenter">beau</string>
    <string name="title_activity_compliment">compliment</string>
    <string name="random_period_text">Surprise me</string>
    <string name="time_scheduler_text">In certain time</string>
    <string name="add_new_compliment">Enter new compliment</string>
    <string name="action_like_hated">Like hated compliment</string>
    <string name="title_activity_add_new_compliment">Enter new compliment</string>
    <string name="add_compliment_hint">Enter compliment here!</string>
    <string name="add_compliment_btn_text">Enter compliment</string>
    <string name="title_activity_like_hated">Hated compliments</string>
    <string name="enter_compliment">Please enter a compliment!</string>
    <string name="compliment_added">Your compliment was been included!</string>
    <string name="no_hated_compliments_text">No hated compliments!</string>
    <string name="surprise_option_every_day">Once a day</string>
    <string name="surprise_option_every_week">Once a week</string>
    <string name="no_loadable_compliments">You are very beautiful, but there are no compliments to show!\nLike a hated compliment or enter your own!</string>
    <string name="like_hated_title">Like a hated compliment</string>
    <string name="like_hated_message">Would you want to like the compliment? \n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_failed">The action was not fulfilled! \n</string>
    <string name="hated_was_removed">It was removed from the list of hated compliments!</string>
    <string name="back_text">back</string>
    <string name="like_compliment_text">Like compliment</string>
    <string name="dislike_compliment_text">Hate compliment</string>
    <string name="was_written_in_hated_list">The compliment: \"%s\" was hated! "</string>
    <string name="notify_unread_compliment_text">I have a compliment for you!</string>
    <string name="minimum_waiting_time_text">Time must be at least:</string>
    <string name="please_wait">Please wait . . . </string>

    <string-array name="compliments_array">
        <item>"You're beautiful, it's true!"</item>
        <item>"For me your smile is like the sunrise for the flowers!"</item>
        <item>"Your beauty left me breathless!"</item>
        <item>"You are more beautiful than the roses, because the roses have thorns!"</item>
        <item>"If I have to say how much I love you from one to ten I would say thirteen"</item>
        <item>"God has created you to show that he can do wonders!"</item>
        <item>"Without you I feel half a person!"</item>
        <item>"Forever is not enough to love you!"</item>
        <item>"Without you, I see no reason to live!"</item>
        <item>"If someone gives me a penny every time I think of you, I would be a billionaire!"</item>
        <item>"When you are around me, nothing else matters!"</item>
        <item>"I am addicted to you and I can not stop loving you!"</item>
        <item>"I think we will grow old together!"</item>
        <item>"I feel grateful when I see you looking at me!"</item>
        <item>"You look great whether you are wearing something or not!"</item>
        <item>"You are the definition of a woman!"</item>
        <item>"Please tell me how can I fall in love with you every time I see you!"</item>
        <item>"I love every second spent with you!"</item>
        <item>"I realized that when I hug you I hold the best thing!"</item>
        <item>"I can not wait to wake up to see your face!"</item>
        <item>"You are beautiful in a million different ways!"</item>
        <item>"All I want in life is you!"</item>
        <item>"You are so unique!"</item>
        <item>"You are the best version of yourself!"</item>
        <item>"You are the best woman that someone might want!"</item>
        <item>"I wish I was half as good as you!"</item>
        <item>"If you ask me what I like most about you. I will answer EVERYTHING!"</item>
        <item>"You give the best ideas!"</item>
        <item>"Everything looks good when you are wearing it!"</item>
        <item>"You should be tired because you are constantly running through my mind!"</item>
        <item>"I will freeze not due to sickness, but because I am stunned by your beauty!"</item>
        <item>"You have two of the most beautiful hands I have ever seen!"</item>
        <item>"You are sweeter than a huge bucket of chocolate!"</item>
        <item>"Is it so hot in here or I am just getting hot when you are around!"</item>
        <item>"Being fabulous is so difficult, but you are doing so great!"</item>
        <item>"Your smile can illuminate the whole universe!"</item>
        <item>"You are the sun in my dreams!"</item>
        <item>"It is impossible to think of a compliment  worthy  enough for you!"</item>
        <item>"Without you I am like shoe ties without shoes and like a sentence without spaces!"</item>
        <item>"Your voice is music to my ears!"</item>
        <item>"I need you more than air!"</item>
        <item>"You deserve all the compliments in the world!"</item>
        <item>"The world would be a better place if more people were like you!"</item>
        <item>"The flowers smell better when they are in your hand!"</item>
        <item>"You are my reason to feel love!"</item>
        <item>"You are more pleasant than a fairy tale with a happy ending!"</item>
        <item>"Let me be your hero, for you I am ready to die in battle!"</item>
        <item>"I can not take my eyes off of you!"</item>
        <item>"Your smile shines brighter than a diamond!"</item>
        <item>"You took my heart and my thoughts. Please take care of them well!"</item>
    </string-array>

    <string name="service_restarted">has been restarted</string>
    <string name="hated_was_deleted">was deleted!</string>
    <string name="sms_was_send">The message was sent!</string>
    <string name="chose_number">chose a number</string>
    <string name="name">name</string>
    <string name="empty_input_values">Input values can not be empty!</string>
    <string name="btn_chose_num_text">chose number</string>
    <string name="title_activity_sms_activity">Send message</string>
    <string name="sms_did_not_save">Could not save the message in sent messages!</string>
    <string name="surprise_option_every_6_hours">Every Six Hours</string>
    <string name="surprise_option_every_8_hours">Every Eight Hours</string>
    <string name="surprise_option_every_12_hours">Every twelve Hours</string>
    <string name="delete">Delete</string>
    <string name="app_name">Gentle Compliments</string>
    <string name="cancel_icon">cancel_icon</string>
    <string name="app_not_installed">The application is not installed!</string>
    <string name="not_connected">There is no internet connection!</string>
    <string name="chose_application">Choose an application!</string>
    <string name="message">Message:</string>
    <string name="permission_needed">Permission necessary</string>
    <string name="sms_permission_needed">Message send permission necessary</string>
    <string name="reward_message">You have been rewarded. You will see no ads for a week.</string>


    <string-array name="surprises">
        <item>@string/surprise_option_every_day</item>
        <item>@string/surprise_option_every_6_hours</item>
        <item>@string/surprise_option_every_8_hours</item>
        <item>@string/surprise_option_every_12_hours</item>
        <item>@string/surprise_option_every_week</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logo_icon">logo icon</string>
    <string name="sms_icon">sms icon</string>
    <string name="vibration">Vibration</string>

    <string name="default_notification_channel_id" translatable="false">default</string>

    <string name="system_compliment">You are so pretty that system desires to make you a compliment!</string>

</resources>