<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/title_activity_add_new_compliment"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"
               />
        <item
            android:id="@+id/nav_like_dislike"
            android:icon="@drawable/dislike"
            android:title="@string/title_activity_like_hated"
            />
    </group>

    <item android:title="@string/chose_application">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_cancel"
                android:title="@string/exit_text"
                />
        </menu>
    </item>

</menu>
