<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/customActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:weightSum="10">

        <CheckBox
            android:id="@+id/chbDontDisturb"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="true"
            android:gravity="center_vertical|center"
            android:text="@string/do_not_disturb_label" />

        <LinearLayout
            android:id="@+id/llDoNotDisturbPeriod"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/twBetween"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/timePicker_between_text"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/etFirstTime"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/default_first_time"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/twAnd"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timePicker_and_text"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/etSecondTime"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_text_small"
                android:paddingRight="@dimen/padding_text_small"
                android:text="@string/default_second_time"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>
        <!-- horizontal line -->
        <View
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thin_border" />

        <!-- disturb type of complimenting area -->
        <RadioGroup
            android:id="@+id/rgWaitingTimeArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal">

            <RadioButton
                android:id="@+id/rbSchedule"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/time_scheduler_text" />

            <RadioButton
                android:id="@+id/rbSurpriseMe"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/random_period_text" />
        </RadioGroup>

        <!-- input type area -->
        <LinearLayout
            android:id="@+id/llAreaInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" />

        <!-- horizontal line -->
        <View
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thin_border" />
        <!-- button start stop area -->
        <LinearLayout
            android:id="@+id/llButtonArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/btnStartStop"
                style="@style/customButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text_small"
                android:text="@string/btnStart_text" />
        </LinearLayout>


        <!-- ad area -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/smart_banner_ad_unit_id" />
    </LinearLayout>

</RelativeLayout>

