<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.meline.gentleservice.ui.fragments.ComplimentSetupFragment">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        >

        <CheckBox
            android:id="@+id/chb_dont_disturb"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:checked="false"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/do_not_disturb_label" />

        <LinearLayout
            android:id="@+id/ll_dont_disturb_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tw_between"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/timePicker_between_text"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/et_start_time"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/default_first_time"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/tw_and"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timePicker_and_text"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/et_end_time"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_text_small"
                android:paddingRight="@dimen/padding_text_small"
                android:text="@string/default_second_time"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>
        <!-- horizontal line -->
        <View
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thin_border" />

        <!-- disturb type of complimenting area -->
        <RadioGroup
            android:id="@+id/rgWaitingTimeArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_weight="2"
            android:gravity="top|center_horizontal">

            <RadioButton
                android:id="@+id/rbSchedule"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/time_scheduler_text" />

            <RadioButton
                android:id="@+id/rbSurpriseMe"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/random_period_text" />
        </RadioGroup>

        <!-- input type area -->
        <LinearLayout
            android:id="@+id/ll_input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="RtlHardcoded" />

</FrameLayout>
